--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,15 @@ spring:
     password: ${DATABASE_PASSWORD}
   redis:
     host: localhost
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+
+kakao:
+  api-key: ${KAKAO_REST_API_KEY}
 ---
 spring:
   config:
@@ -14,3 +23,6 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:default
+  jpa:
+    hibernate:
+      ddl-auto: create
