#7 약국 관련 table schema 설계 및 구성
- 약국 데이터 저장용 table schema 설계
-- 설계 사항에 대해 readme에 업데이트
- 설계된 스키마 기반으로 테이블 생성 쿼리 추가 및 docker-compose 연동

--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -7,6 +7,7 @@ services:
     image: mariadb:11.0-rc
     volumes:
       - ./db/conf.d:/etc/mysql/conf.d
+      - ./db/init.d:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
     environment:
