--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,10 +8,7 @@ spring:
     host: localhost
   jpa:
     hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        format_sql: true
+      ddl-auto: validate
 
 kakao:
   api-key: ${KAKAO_REST_API_KEY}
@@ -26,3 +23,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
