#7 DB 연동 테스트 고도화를 위해 TestContainers 의존성 추가
- 기존 test용도 DB인 h2 의존성 제거
-- 인메모리라 편하긴 하지만 운영 DB인 mariaDB와는 문법적 차이가 조금 있음
- 운영환경과 맞추기 위해 MariaDB 컨테이너를 사용하는 TestContainers 의존성 추가 및 테스트 환경 구축
-- redis는 제공하지 않기에 별도 설정 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,8 +18,8 @@ spring:
     activate:
       on-profile: test
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:default
+    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+    url: jdbc:tc:mariadb:11:///pharmacy-explorer
   jpa:
     hibernate:
       ddl-auto: create
