#11 외부 API 호출 시 응답 불가 관련 예외 처리
- spring retry 설정을 통해 재시도 및 실패 시 처리 로직 구현
-- spring retry 관련 의존성 및 설정 추가
-- url 생성을 위한 별도 component 구현
- retry 테스트를 위한 mockwebserver 관련 설정
-- 관련 의존성 추가
-- 기존 테스트 코드 개선 및 추가

#11 주석 추가

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
+    implementation 'org.springframework.retry:spring-retry'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
@@ -41,6 +42,8 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:mariadb'
+    testImplementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
 }
 
 dependencyManagement {
