--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,8 @@ spring:
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
   redis:
-    host: localhost
+    host: ${PHARMACY_REDIS_HOST}
+    port: ${PHARMACY_REDIS_PORT}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -20,6 +21,9 @@ spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:mariadb:11:///pharmacy-explorer
+  redis:
+    host: localhost
+    port: 6379
   jpa:
     hibernate:
       ddl-auto: create
