--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,3 +28,14 @@ spring:
       hibernate:
         format_sql: true
     show-sql: true
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: ${PHARMACY_EXPLORER_DB_URL}
+  jpa:
+    hibernate:
+      ddl-auto: update
