#24 github action 스크립트 오타 수정
- app.yml 파일 경로 오타 수정 (/coudtype -> /.cloudtype)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,4 +20,4 @@ jobs:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           project: pharmacy-explorer-app/pharmacy-explorer-app
           stage: main
-          file: ./cloudtype/app.yml
+          file: ./.cloudtype/app.yml
