#24 app.yml 파일을 읽어오지 못하는 오류가 있어 deploy 스크립트 내에 삽입
- app.yml 경로를 계속해서 읽어오지 못하고 있기에 배포스크립트 내에 직접 주입하는 방식으로 변경함

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,4 +20,28 @@ jobs:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           project: pharmacy-explorer-app/pharmacy-explorer-app
           stage: main
-          file: ./.cloudtype/app.yml
+          yaml: |
+            name: pharmacy-explorer
+            app: java@11
+            options:
+              ports: 8080
+              env:
+                - name: SPRING_PROFILES_ACTIVE
+                  value: prod
+                - name: PHARMACY_EXPLORER_DB_URL
+                  var: PHARMACY_EXPLORER_DB_URL
+                - name: DATABASE_USERNAME
+                  secret: DATABASE_USERNAME
+                - name: DATABASE_PASSWORD
+                  secret: DATABASE_PASSWORD
+                - name: PHARMACY_REDIS_HOST
+                  var: PHARMACY_REDIS_HOST
+                - name: PHARMACY_REDIS_PORT
+                  var: PHARMACY_REDIS_PORT
+                - name: KAKAO_REST_API_KEY
+                  secret: KAKAO_REST_API_KEY
+            context:
+              git:
+                url: git@github.com:${{ github.repository }}.git
+                ref: ${{ github.ref }}
+              preset: java-springboot
