#24 deploy 스크립트 내 오기입 된 설정 수정
- github 리포지토리 경로 오기입 요소 수정

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,6 @@ jobs:
                   secret: KAKAO_REST_API_KEY
             context:
               git:
-                url: git@github.com:${{ github.repository }}.git
+                url: https://github.com/GuardJo/pharmacy-explorer.git
                 ref: ${{ github.ref }}
               preset: java-springboot
